2000-05-08  Dirk Herrmann  <D.Herrmann@tu-bs.de>

	* alist.c (scm_acons):  Use SCM{_SET}?_CELL_OBJECT as long as a
	cell is not known to be a valid pair.

2000-05-08  Dirk Herrmann  <D.Herrmann@tu-bs.de>

	* eval.c (ASRTSYNTAX, scm_m_body, scm_m_letrec1):  Removed
	ASRTSYNTAX.  Using SCM_ASSYNT instead.

	(scm_m_body):  Don't create a redundant cons cell.

	(scm_m_do):  Removed redundant test 'bodycheck'.

	(bodycheck):  Removed.

	* stacks.c (stack_depth, read_frame, read_frames):  Removed
	redundant calculation of size, minimized some variable scopes.

2000-05-05  Dirk Herrmann  <D.Herrmann@tu-bs.de>

	* pairs.c (scm_cons, scm_cons2):  Use SCM{_SET}?_CELL_OBJECT as
	long as a cell is not known to be a valid pair.

	(scm_pair_p):  Eliminated redundant SCM_IMP test.

2000-05-05  Dirk Herrmann  <D.Herrmann@tu-bs.de>

	* eval.c (scm_m_body, scm_macroexp, unmemocopy, scm_eval_args,
	scm_deval_args):  Eliminated redundant SCM_IMP tests.

	* hashtab.c (scm_ihashx, scm_sloppy_assx, scm_delx_x), weaks.c
	(scm_make_weak_key_hash_table, scm_make_weak_value_hash_table,
	scm_make_doubly_weak_hash_table):  Fixed critical sections.
	Thanks to Keisuke Nishida.

2000-05-05  Dirk Herrmann  <D.Herrmann@tu-bs.de>

	* numbers.c (scm_logand, scm_logior, scm_logxor, scm_logtest):
	Fixed some goto-related initialization bugs (introduced by me).

2000-05-04  Dirk Herrmann  <D.Herrmann@tu-bs.de>

	* numbers.h (SCM_INUM0):  Uses SCM_MAKINUM instead of SCM_PACK.

	* dynl.c (dynl_obj, DYNL_OBJ, get_dynl_obj):  Removed.

	(DYNL_FILENAME, DYNL_HANDLE):  Use SCM_CELL... macros instead of
	pointer trickery.

	(SET_DYNL_HANDLE):  Added.

	(scm_dynamic_object_p):  Simplified.

	(scm_dynamic_unlink, scm_dynamic_func):  Changed comment.  Deliver
	better error message when accessing unlinked dynamic objects.
	Eliminated call to get_dynl_obj.

2000-05-03  Marius Vollmer  <mvo@zagadka.ping.de>

	* scmsigs.c (orig_handlers) [!HAVE_SIGACTION]: Fix declaration to